 - [DS-388] Item importer - new option to enable workflow notification emails
 - [DS-389] Misleading label: "Submit to This Collection"
 - [DS-424] Export metadata button displayed in JSPUI Administration List of withdrawn items
 - [DS-442] Enable RSS feeds by default
 - [DS-445] New Bitstream.findAll() method
 - [DS-446] New ant step - test_database
 - [DS-447] Email test script

(Larry Stone)
 - [DS-284] alternate odd and even styles correctly on table rows in Item Summary view
 - [DS-393] Fix DCDate and submission timezone bugs that changed date on page reload
 - [DS-377] Add META tags identifying DSpace source version
 - [DS-373] Fix "Letter" link URLs in 2nd-stage Browse
 - [DS-294] Add preferred language setting to Edit Profile page in XMLUI
 - [DS-361] Syndication Feeds refactoring, support all RSS/Atom formats for both feed and OpenSearch
 - [DS-369] Follow harvest.includerestricted.rss in XMLUI
 - [DS-349] Admins can choose Internal BitstreamFormats in XMLUI
 - [DS-347] Add --quiet option to filter-media (MediaFilterManager) to disable progress messages
 - [DS-297] Move PostgreSQL-specific SQL into etc/postgres for greater clarity
 - [DS-338] Disable cache advice (Expires header) on Bitstream download that requires authorization (XMLUI)
 - [DS-285] Respond to If-Modified-Since request header in XMLUI, also provide Last-Modified response header for Bitstreams
 - [DS-288] Configurable option to hide metadata fields in public UIs and OAI-PMH
 - [DS-128] Fix repositioning on submission pages after add button is clicked (XMLUI)
 - [DS-255] Protect submission from being lost if exception occurs in CompleteStep
 - [DS-254] Fix response for authorization failure on Bitstream when user is logged-in
 - [DS-232] Parse personal names correctly if there is no space after the last name
 - [DS-191] metadataschemaregistry_seq is not initialized correctly under Oracle
 - [DS-193] OAI RDF crosswalk fails when DC value is null